# gale

./: configure.ac  gale.spec  meson.build
gdomain/: meson.build
gsend/: meson.build
gsub/: meson.build
include/gale/: compat.h  config.h.dox  meson.build  types.h
kutils/: meson.build
libgale/: Makefile.am  core_init.c  meson.build  misc_connect.c  misc_terminal.c  wcwidth.c
liboop/: Makefile.am  configure.ac  meson.build  test-oop.c
server/: connect.c  meson.build
