libgale_srcs = [
  'client_alias.c',
  'client_code.c',
  'client_default.c',
  'client_i.c',
  'client_location.c',
  'client_pack.c',
  'client_queue.c',
  'client_server.c',
  'client_standard.c',
  'client_unpack.c',
  'core_init.c',
  'core_link.c',
  'core_signals.c',
  'crypto_gen.c',
  'crypto_i.c',
  'crypto_misc.c',
  'crypto_seal.c',
  'crypto_sign_raw.c',
  'crypto_sign.c',
  'io_input.c',
  'io_output.c',
  'key_assert.c',
  'key_generate.c',
  'key_graph.c',
  'key_handle.c',
  'key_i.c',
  'key_search_akd.c',
  'key_search_builtin.c',
  'key_search_dirs.c',
  'key_search.c',
  'misc_alloc.c',
  'misc_charset.c',
  'misc_connect.c',
  'misc_debug.c',
  'misc_dir.c',
  'misc_envvar.c',
  'misc_error.c',
  'misc_exec.c',
  'misc_file.c',
  'misc_fragment.c',
  'misc_globals.c',
  'misc_kill.c',
  'misc_map.c',
  'misc_pack.c',
  'misc_readline.c',
  'misc_report.c',
  'misc_terminal.c',
  'misc_text.c',
  'misc_time.c'
  ]
libgale = static_library('gale', libgale_srcs, dependencies: core_deps, include_directories : incdirs)
libgale_dep = declare_dependency(include_directories: incdirs, link_with: libgale, dependencies: liboop_dep)
